apps/services/craftycontroller/service-minecraft.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: craftycontroller-minecraft
  namespace: craftycontroller
  labels:
    advertise: bgp
  annotations:
    metallb.universe.tf/allow-shared-ip: minecraft
spec:
  type: LoadBalancer
  loadBalancerIP: 172.21.0.8  # Adjust to your available IP range
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: minecraft
  selector:
    app.kubernetes.io/name: craftycontroller
    app.kubernetes.io/instance: craftycontroller
