apps/services/craftycontroller/ingressroute-craftycontroller-ui.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: craftycontroller-ui
  namespace: craftycontroller
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`crafty.xrs444.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: craftycontroller-oauth2-proxy
          port: 4180
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
